cf_analysis_results/checkerframework_3.42.0_results_WPI/url85940d3d8e_ccp999_Expr4j_tgz-pJ8-org_boris_expr_util_ExprEvaluatorJ8.txt
../dataset/june2020_dataset/url85940d3d8e_ccp999_Expr4j_tgz-pJ8-org_boris_expr_util_ExprEvaluatorJ8/src/org/boris/expr/util/IO.java:41: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(f) $$ java.io.FileReader $$ possible exceptional exit due to toString(new FileReader(f)) with exception type java.io.IOException $$ ( 1280, 1297 ) $$ @MustCall method close may not have been invoked on new FileReader(f) or any of its aliases.
        return toString(new FileReader(f));
                        ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to toString(new FileReader(f)) with exception type java.io.IOException
../dataset/june2020_dataset/url85940d3d8e_ccp999_Expr4j_tgz-pJ8-org_boris_expr_util_ExprEvaluatorJ8/src/org/boris/expr/util/IO.java:93: error: (required.method.not.called) $$ 4 $$ method close $$ fis $$ java.io.FileInputStream $$ possible exceptional exit due to fis.read(b) with exception type java.io.IOException $$ ( 2616, 2664 ) $$ @MustCall method close may not have been invoked on fis or any of its aliases.
        FileInputStream fis = new FileInputStream(file);
                        ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to fis.read(b) with exception type java.io.IOException
../dataset/june2020_dataset/url85940d3d8e_ccp999_Expr4j_tgz-pJ8-org_boris_expr_util_ExprEvaluatorJ8/src/org/boris/expr/util/IO.java:121: error: (required.method.not.called) $$ 4 $$ method close $$ clazz.getResourceAsStream(resource) $$ java.io.InputStream $$ possible exceptional exit due to readLines(new InputStreamReader(clazz.getResourceAsStream(resource))) with exception type java.io.IOException $$ ( 3522, 3574 ) $$ @MustCall method close may not have been invoked on clazz.getResourceAsStream(resource) or any of its aliases.
                .getResourceAsStream(resource)));
                                    ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to readLines(new InputStreamReader(clazz.getResourceAsStream(resource))) with exception type java.io.IOException
../dataset/june2020_dataset/url85940d3d8e_ccp999_Expr4j_tgz-pJ8-org_boris_expr_util_ExprEvaluatorJ8/src/org/boris/expr/parser/TokenReader.java:21: error: (required.method.not.called) $$ 4 $$ method close $$ field r $$ java.io.Reader $$  Non-final owning field might be overwritten $$ ( 647, 657 ) $$ @MustCall method close may not have been invoked on field r or any of its aliases.
        this.r = r;
               ^
  The type of object is: java.io.Reader.
  Reason for going out of scope:  Non-final owning field might be overwritten
../dataset/june2020_dataset/url85940d3d8e_ccp999_Expr4j_tgz-pJ8-org_boris_expr_util_ExprEvaluatorJ8/src/org/boris/expr/parser/TokenReader.java:21: error: (assignment) $$ 2 $$ @PolyMustCall Reader $$ @MustCall("close") Reader $$ ( 656, 657 ) $$ incompatible types in assignment.
        this.r = r;
                 ^
  found   : @PolyMustCall Reader
  required: @MustCall("close") Reader
../dataset/june2020_dataset/url85940d3d8e_ccp999_Expr4j_tgz-pJ8-org_boris_expr_util_ExprEvaluatorJ8/src/org/boris/expr/TestGen.java:21: error: (required.method.not.called) $$ 4 $$ method close $$ ZTEST.class.getResourceAsStream("flist.txt") $$ java.io.InputStream $$ possible exceptional exit due to br.readLine() with exception type java.io.IOException $$ ( 735, 779 ) $$ @MustCall method close may not have been invoked on ZTEST.class.getResourceAsStream("flist.txt") or any of its aliases.
                ZTEST.class.getResourceAsStream("flist.txt")));
                                               ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to br.readLine() with exception type java.io.IOException
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
6 errors
